# zenpixels

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  LICENSE-APACHE  README.md  filter-needs-v2.md  filter-needs.md  justfile  spec.md  suggestions.md
.github/workflows/: ci.yml  icc-profiles.yml
benchmarks/: SUMMARY_2026-04-23.md  hlg_regression_probe_2026-04-23.txt  matlut_vs_poly_2026-04-23.csv  premul_u16_2026-04-23_after.txt  premul_u16_2026-04-23_baseline.txt  t1_layout_2026-04-23_after_matte_tf.txt  t1_layout_2026-04-23_after_phase2.txt  t1_layout_2026-04-23_baseline.txt  t2_depth_2026-04-23_after_f16c.txt  t2_depth_2026-04-23_baseline.txt  t3_tf_fused_2026-04-23_baseline.txt  t3_tf_fused_2026-04-23_local_linsrgb.txt  t4_tf_f32_2026-04-23_baseline.txt  t4_tf_f32_2026-04-23_local_linsrgb.txt  t5_alpha_2026-04-23_after_f16c.txt  t5_alpha_2026-04-23_baseline.txt  t6_oklab_2026-04-23_baseline.txt  t7_gamut_2026-04-23_baseline.txt  u16_encode_poly_vs_lut_2026-04-23.txt  u16_fused_poly_vs_matlut_2026-04-23.txt  u16_hybrid_matrix_2026-04-23.txt  u16_sqrt_aos_regression_2026-04-24.txt  u16_sqrt_vs_linear_2026-04-23.txt
benchmarks/fast_gamut_baseline_2026-05-02/: META.txt
convert/: Cargo.toml
convert/src/: adapt.rs  cms.rs  convert.rs  ext.rs  lib.rs  negotiate.rs  op_format.rs  output.rs  path.rs  registry.rs
convert/tests/: negotiate.rs  path_validation.rs  perceptual_loss.rs  transfer.rs  ulp_exhaustive.rs
docs/: CALIBRATION.md  NEGOTIATION_PLAN.md  format_browser.html  format_recommendations.json  format_recommendations.md
scripts/: gen_icc_tables.rs  verify_via_moxcms.rs
scripts/cdylib-link-bench/: Cargo.toml
scripts/cdylib-link-bench/src/: lib.rs
scripts/icc-gen/: Cargo.toml  README.md
scripts/icc-gen/src/: main.rs
src/: adapt.rs  buffer.rs  cicp.rs  color.rs  convert.rs  converter.rs  descriptor.rs  error.rs  gamut.rs  hdr.rs  lib.rs  negotiate.rs  oklab.rs  op_format.rs  path.rs  pixel_types.rs  pixels.rs  registry.rs
tests/: adapt.rs  negotiate.rs  path_validation.rs  perceptual_loss.rs  roundtrip.rs  transfer.rs  ulp_exhaustive.rs
zenpixels/: Cargo.toml
zenpixels-convert/: Cargo.toml  TONEMAP_EXAMPLE_DESIGN.md
zenpixels-convert/benches/: bench_cms.rs  bench_fast_p3.rs  bench_fast_p3.rs.deferred  bench_hlg_regress.rs  bench_matlut_vs_poly.rs  bench_premul_u16.rs  bench_t1_layout.rs  bench_t2_depth.rs  bench_t3_tf_fused.rs  bench_t4_tf_f32.rs  bench_t5_alpha.rs  bench_t6_oklab.rs  bench_t7_gamut.rs  bench_u16_encode.rs  bench_u16_hybrids.rs  bench_xyb_moxcms.rs
zenpixels-convert/src/: __trace_ops.rs  adapt.rs  builtin_profiles.rs  clut.rs  cms.rs  cms_lite.rs  cms_moxcms.rs  convert.rs  convert_kernels.rs  converter.rs  error.rs  ext.rs  f16_scalar.rs  fast_gamut.rs  fast_gamut_DESIGN.md  fast_p3.rs  gamut.rs  hdr.rs  icc_profiles.rs  lib.rs  load_bearing.rs  negotiate.rs  oklab.rs  op_format.rs  output.rs  path.rs  pixels.rs  scan.rs  tracer.rs
zenpixels-convert/src/convert/: alpha.rs  kernels.rs  mod.rs  plan.rs  step.rs  transfer.rs
zenpixels-convert/src/negotiate/: cost.rs  mod.rs  tests.rs
zenpixels-convert/src/pipeline/: mod.rs  path.rs  registry.rs
zenpixels-convert/tests/: accuracy_ground_truth.rs  adapt.rs  adapt_extended.rs  builtin_xyb.rs  cbrt_compare.rs  cicp_flag_impact.rs  cicp_transfer_correctness.rs  cms_corpus_profiles.rs  cms_moxcms.rs  cms_real_profiles.rs  gamma22_transfer.rs  gamut_convert.rs  gamut_reduction_compare.rs  luma_coefficients.rs  matrix_verification.rs  matte_composite_linearize.rs  matte_composite_premul.rs  output_finalize.rs  palette_crossval.rs  path_validation.rs  perceptual_loss.rs  plan_validation.rs  planner_silent_passthrough.rs  registry_validation.rs  roundtrip.rs  transfer.rs
zenpixels/src/: buffer.rs  cicp.rs  color.rs  descriptor.rs  hdr.rs  lib.rs  orientation.rs  pixel_types.rs  planar.rs  policy.rs  registry.rs
zenpixels/src/buffer/: conversions.rs  mod.rs  pixel_buffer.rs  slice.rs  slice_mut.rs  tests.rs
zenpixels/src/descriptor/: mod.rs  pixel_descriptor.rs  pixel_format.rs  planar.rs  tests.rs
zenpixels/src/icc/: icc_table_gray.inc  icc_table_rgb.inc  mod.rs
zenpixels/tests/: profile_features_survey.rs
