[workspace]
members = ["zenpixels", "zenpixels-convert", "scripts/icc-gen", "scripts/cdylib-link-bench"]
resolver = "2"

[workspace.dependencies]
zenpixels = { path = "zenpixels", version = "0.2.6", default-features = false }

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/imazen/zenpixels"
categories = ["multimedia::images"]
