[workspace]
members = ["zenpixels", "zenpixels-convert", "scripts/icc-gen"]
resolver = "2"

[workspace.dependencies]
zenpixels = { path = "zenpixels", version = "0.2.8", default-features = false }

[workspace.package]
version = "0.2.8"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/imazen/zenpixels"
categories = ["multimedia::images"]
