[package]
name = "zenpixels-convert"
version = "0.2.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true
categories.workspace = true
description = "Transfer-function-aware pixel conversion, gamut mapping, and codec format negotiation for zenpixels"
keywords = ["image", "pixel", "conversion", "srgb", "codec"]

[features]
default = ["std"]
std = ["zenpixels/std", "linear-srgb/std", "garb/std"]
rgb = ["zenpixels/rgb", "dep:rgb"]
imgref = ["zenpixels/imgref", "rgb"]
planar = ["zenpixels/planar"]
pipeline = []
cms-moxcms = ["std", "dep:moxcms"]
serde = ["zenpixels/serde"]

[dependencies]
zenpixels = { version = "0.2.2", default-features = false }
linear-srgb = { version = "0.6.7", default-features = false, features = ["transfer"] }
bytemuck = { version = "1.21", default-features = false, features = ["extern_crate_alloc", "derive"] }
rgb = { version = "0.8", default-features = false, features = ["bytemuck"], optional = true }
garb = { version = "0.2.5", default-features = false, features = ["experimental"] }
archmage = { version = "0.9.15", default-features = false }
whereat = { version = "0.1.5", default-features = false }
moxcms = { version = "0.8.1", optional = true, features = ["options"] }

[dev-dependencies]
zenpixels = { version = "0.2.2", features = ["planar", "imgref"] }
zenpixels-convert = { path = "", features = ["pipeline", "imgref", "cms-moxcms"] }
zenbench = { version = "0.1.2"}
half = "2"
palette = "0.7"

[[bench]]
name = "bench_cms"
path = "benches/bench_cms.rs"
harness = false
required-features = ["cms-moxcms"]

