[package]
name = "zenpixels-convert"
version = "0.3.0"
edition.workspace = true
rust-version = "1.89"
license.workspace = true
readme = "../README.md"
repository.workspace = true
categories.workspace = true
description = "Transfer-function-aware pixel conversion, gamut mapping, and codec format negotiation for zenpixels"
keywords = ["image", "pixel", "conversion", "srgb", "codec"]
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[features]
default = ["std"]
std = ["zenpixels/std", "linear-srgb/std", "garb/std"]
rgb = ["zenpixels/rgb", "dep:rgb"]
imgref = ["zenpixels/imgref", "rgb"]
planar = ["zenpixels/planar"]
pipeline = []
cms-moxcms = ["std", "dep:moxcms"]
serde = ["zenpixels/serde"]

[dependencies]
zenpixels = { workspace = true, default-features = false }
linear-srgb = { version = "0.6.7", default-features = false, features = ["transfer"] }
bytemuck = { version = "1.21", default-features = false, features = ["extern_crate_alloc", "derive"] }
rgb = { version = "0.8", default-features = false, features = ["bytemuck"], optional = true }
garb = { version = "0.2.5", default-features = false, features = ["experimental"] }
archmage = { version = "0.9.15", default-features = false }
whereat = { version = "0.1.5", default-features = false }
moxcms = { version = "0.8.1", optional = true, features = ["options"] }

[dev-dependencies]
zenpixels = { workspace = true, features = ["planar", "imgref"] }
zenpixels-convert = { path = "", features = ["pipeline", "imgref", "cms-moxcms"] , version = "0.3.0" }
zenbench = { version = "0.1.2"}
half = "2"
palette = "0.7"

[[bench]]
name = "bench_cms"
path = "benches/bench_cms.rs"
harness = false
required-features = ["cms-moxcms"]

