[package]
name = "zenpixels-convert"
version = "0.2.10"
edition.workspace = true
rust-version = "1.89"
license.workspace = true
readme = "../README.md"
repository.workspace = true
categories.workspace = true
description = "Transfer-function-aware pixel conversion, gamut mapping, and codec format negotiation for zenpixels"
keywords = ["image", "pixel", "conversion", "srgb", "codec"]
include = [
    "/src/**",
    "/tests/**",
    "/benches/*.rs",
]

[features]
default = ["std"]
std = ["zenpixels/std", "linear-srgb/std", "garb/std"]
rgb = ["zenpixels/rgb", "dep:rgb"]
imgref = ["zenpixels/imgref", "rgb"]
planar = ["zenpixels/planar"]
pipeline = []
cms-moxcms = ["std", "dep:moxcms"]
serde = ["zenpixels/serde"]
# Enables u16 RGB gamut hybrid kernels (LUT+poly, poly+LUT, poly+poly)
# for benchmarking. Requires unreleased linear-srgb ≥ 0.6.12 with the
# srgb_u16_to_linear_v3 / linear_to_srgb_u16_v3 rites. Off by default
# so the crate builds against crates.io linear-srgb 0.6.11.
__bench_u16_hybrids = []

[dependencies]
zenpixels = { workspace = true, default-features = false, features = ["icc"] }
linear-srgb = { version = "0.6.10", default-features = false, features = ["transfer"] }
bytemuck = { version = "1.21", default-features = false, features = ["extern_crate_alloc", "derive"] }
rgb = { version = "0.8", default-features = false, features = ["bytemuck"], optional = true }
garb = { version = "0.2.5", default-features = false, features = ["experimental"] }
archmage = { version = "0.9.15", default-features = false }
magetypes = { version = "0.9.18", default-features = false }
paste = "1.0.15"
once_cell = { version = "1.21.4", default-features = false, features = ["race", "alloc"] }
whereat = { version = "0.1.5", default-features = false }
moxcms = { version = "0.8.1", optional = true, features = ["options"] }

[dev-dependencies]
zenpixels = { workspace = true, features = ["planar", "imgref"] }
zenpixels-convert = { path = ".", features = ["pipeline", "imgref", "cms-moxcms"] }
zenbench = { version = "0.1.2"}
# Dev-only: cross-validate our local f16 impl (src/f16_scalar.rs) and drive
# the perceptual-loss test suite, which uses half's f64 conversion paths.
half = "2.7.1"
palette = { version = "0.7", default-features = false, features = ["std", "approx"] }

[[bench]]
name = "bench_cms"
path = "benches/bench_cms.rs"
harness = false
required-features = ["cms-moxcms"]

[[bench]]
name = "bench_premul_u16"
path = "benches/bench_premul_u16.rs"
harness = false

[[bench]]
name = "bench_t1_layout"
path = "benches/bench_t1_layout.rs"
harness = false

[[bench]]
name = "bench_t2_depth"
path = "benches/bench_t2_depth.rs"
harness = false

[[bench]]
name = "bench_t3_tf_fused"
path = "benches/bench_t3_tf_fused.rs"
harness = false

[[bench]]
name = "bench_t4_tf_f32"
path = "benches/bench_t4_tf_f32.rs"
harness = false

[[bench]]
name = "bench_t5_alpha"
path = "benches/bench_t5_alpha.rs"
harness = false

[[bench]]
name = "bench_t6_oklab"
path = "benches/bench_t6_oklab.rs"
harness = false

[[bench]]
name = "bench_t7_gamut"
path = "benches/bench_t7_gamut.rs"
harness = false

[[bench]]
name = "bench_matlut_vs_poly"
path = "benches/bench_matlut_vs_poly.rs"
harness = false

[[bench]]
name = "bench_hlg_regress"
path = "benches/bench_hlg_regress.rs"
harness = false

[[bench]]
name = "bench_u16_encode"
path = "benches/bench_u16_encode.rs"
harness = false

[[bench]]
name = "bench_u16_hybrids"
path = "benches/bench_u16_hybrids.rs"
harness = false
required-features = ["__bench_u16_hybrids"]

# TODO: restore when ZenCmsLite is public
# [[bench]]
# name = "bench_fast_p3"
# path = "benches/bench_fast_p3.rs"
# harness = false
# required-features = ["cms-moxcms"]

