[package]
name = "zenpixels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme = "../README.md"
repository.workspace = true
categories.workspace = true
description = "Pixel format interchange types for zen* codecs"
keywords = ["image", "pixel", "format", "descriptor", "codec"]

[features]
default = ["std"]
std = []
planar = []
rgb = ["dep:rgb"]
imgref = ["dep:imgref", "rgb"]

[dependencies]
bytemuck = { version = "1.21", default-features = false, features = ["extern_crate_alloc", "derive"] }
rgb = { version = "0.8", default-features = false, features = ["bytemuck"], optional = true }
imgref = { version = "1.12", optional = true }
whereat = { version = "0.1.3", path = "../../whereat", default-features = false }

[dev-dependencies]
imgref = "1.12"
rgb = { version = "0.8", default-features = false, features = ["bytemuck"] }
