[package]
name = "icc-gen"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
publish = false
description = "Internal tool: regenerate zenpixels ICC profile hash tables from a corpus of ICC profiles"

[features]
default = []
# Enable lcms2 cross-checking (requires the Little CMS 2 C library system-wide).
# Run: cargo run -p icc-gen --features lcms2-crosscheck --release -- ...
lcms2-crosscheck = ["dep:lcms2"]

[dependencies]
moxcms = { version = "0.8.1", features = ["options"] }
lcms2 = { version = "6.1.1", optional = true }
